monitoring/grafana/20-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - grafana.krsdev.local
      port:
        name: http
        protocol: HTTP
        number: 80
