monitoring/grafana/20-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
    - grafana.krsdev.local
  gateways:
    - grafana
  http:
    - route:
        - destination:
            host: grafana
